src/objects/LabTools_Runner__c.object
<CustomObject>
    <fields>
        <fullName>LastRunOn__c</fullName>
        <label>Last Run On</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>NextRunOn__c</fullName>
        <label>Next Run On</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>RecurrenceRate__c</fullName>
        <label>Recurrence Rate</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RecurrenceType__c</fullName>
        <label>RecurrenceType</label>
        <picklist>
            <picklistValues>
                <fullName>Hours</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Days</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Months</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Years</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>StartOn__c</fullName>
        <label>Start On</label>
        <required>true</required>
        <type>DateTime</type>
    </fields>
    <label>Runner</label>
    <nameField>
        <label>Runner Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Runners</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>